<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".SecurityInst">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="10dp"
        android:text="Saftey Protocal"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- LinearLayout inside ScrollView to hold multiple TextViews -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp">

            <!-- Heading 1 -->
            <TextView
                android:id="@+id/heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pre-Shift Responsiblity:"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingBottom="8dp"/>


            <TextView
                android:id="@+id/paragraph1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SecurityBriefing"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingBottom="18dp"/>



            <TextView
                android:id="@+id/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Specific Shift Tasks:"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingBottom="8dp"/>


            <TextView
                android:id="@+id/paragraph2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/SpecificTask"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/paragraph21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/SpecificTask2"
                android:textSize="16sp"
                android:paddingBottom="16dp"/>
            <TextView
                            android:id="@+id/heading3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Traffic Management:"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:paddingBottom="8dp"/>


                        <TextView
                            android:id="@+id/paragraph3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/Traffic"
                            android:textSize="16sp"
                            android:paddingBottom="16dp"/>
                        <TextView
                            android:id="@+id/heading4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Environmental and Health Concerns:"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:paddingBottom="8dp"/>


                        <TextView
                            android:id="@+id/paragraph4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/Environmental"
                            android:textSize="16sp"
                            android:paddingBottom="16dp"/>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>